tests/data/bad/bad_node_required_subclass.py
from __future__ import annotations

from ..good.good import cfg


class BadSubClass:
    pass


cfg = cfg.clone()
cfg.SUBCLASS = None
